[package]
name = "datefmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
icu_locid = "1.5.0"
icu = {features = ["icu_datetime_experimental", "experimental"], version = "1.5.0"}
icu_calendar = "1.5.0"
icu_provider = "1.5.0"
icu_provider_fs = "1.5.0"